[package]
name = "wsl-agent-bridge"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
directories = "1.0"
futures = "0.1"
tokio = "0.1"
tokio-named-pipe = { git = "https://github.com/Azure/iotedge" }
tokio-uds-windows = { git = "https://github.com/Azure/tokio-uds-windows" }
